# axon

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.MD  CONTRIBUTING.md  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish-npm.yml  ts-ci.yml
examples/python/: simple.py
examples/typescript/: anthropic.ts  gemini-stream.ts  gemini.ts  openai.ts
python-sdk/: README.md  pyproject.toml
python-sdk/axon/: __init__.py  _config.py  config.py  core.py  errors.py  registry.py  tasks.py  types.py
python-sdk/axon/adapters/: base.py
python-sdk/axon/hooks/: __init__.py  registry.py
python-sdk/axon/llm/: __init__.py  _registry.py
python-sdk/axon/llm/clients/: register.py
python-sdk/axon/providers/: __init__.py  _hooked.py
python-sdk/axon/providers/openai/: __init__.py  _common.py  adapter.py  client.py  detect.py  proxy.py
python-sdk/examples/: memori.py  simple.py
python-sdk/tests/: test_core_async.py  test_core_sync.py  test_llm_registry.py  test_openai_adapter.py  test_openai_streaming.py
ts-sdk/: .npmignore  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
ts-sdk/examples/: advanced.ts  anthropic.ts  gemini-stream.ts  memori.ts  simple.ts
ts-sdk/src/: adapters.ts  config.ts  core.ts  errors.ts  index.ts  internal.ts  registry.ts  tasks.ts  types.ts
ts-sdk/src/core/: axon.ts  config.ts  index.ts  middleware.ts  monitor.ts  timing.ts  utils.ts
ts-sdk/tests/: README.md  core.test.ts  openai_proxy.test.ts
(+62 files in other folders)
