 [project]
 name = "axon"
 version = "0.1.0"
 description = "Universal LLM wrapper with before/after tasks."
 readme = "README.md"
 requires-python = ">=3.11"
license = { text = "Apache-2.0" }
 authors = [{ name = "MemoriLabs" }]

 [project.optional-dependencies]
 openai = ["openai"]
 dev = ["pytest", "pytest-mock"]

 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"

 [tool.ruff]
 line-length = 88

 [tool.pytest.ini_options]
 testpaths = ["tests"]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "openai>=2.17.0",
    "pytest-mock>=3.14.0",
    "pytest>=9.0.2",
    "requests>=2.32.5",
]

[tool.ty.src]
exclude = [
    "**/__pycache__/**",
]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
possibly-missing-attribute = "ignore"
